# fastapi-template

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/api/: base.py
app/api/endpoints/: item.py
src/: main.py
