[tool.poetry]
name = "fastapi-template"
version = "0.1.0"
description = "a simple template for your next fastapi project"
authors = ["LeonardoNatale <natale.leonardo1997@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
fastapi = "^0.104.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.1"
black = "^23.10.0"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
select = ["E", "F", "I", "UP"]  # https://beta.ruff.rs/docs/rules/
line-length = 100
target-version = 'py310'
ignore = ["E501"]